################################################################################
#                               Project Manifest                               #
#                                                                              #
# This file describes the Rust project to the Cargo build tool for operations. #
################################################################################

[package]
name = "" # crate name here
version = "0.1.0"
authors = [
	"myrrlyn <self@myrrlyn.dev>",
]
edition = "2018"

categories = [
]
description = "A template base manifest"
documentation = "https://docs.rs/" # crate name here
edition = "2018"
homepage = "https://myrrlyn.net/crates/" # crate name here
keywords = [
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/myrrlyn/" # crate name here

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
